[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "z3r0-recon"
version = "3.0.0"
description = "Authorized penetration testing reconnaissance automation framework"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
z3r0-recon = "z3r0_recon.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["z3r0_recon*"]

[tool.setuptools.package-data]
"z3r0_recon.data" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
